--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -358,6 +358,14 @@ th.next
 
 .form-search
   margin-bottom 10px
+  margin-right 190px
+
+.producer-dropdown
+  float right
+  button
+    padding 6px 9px
+  .dropdown-menu
+    margin-left -70px
 
 .shop-menu
   overflow auto
