производитель + фильтрация + поиск

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -363,6 +363,7 @@ th.next
 .producer-dropdown
   float right
   button
+    width 184px
     padding 6px 9px
   .dropdown-menu
     margin-left -70px
@@ -418,14 +419,16 @@ th.next
     td
       text-align center
       &:first-child
-        width 50%
+        width 40%
         text-align left
       &.td-basket
         padding-right 50px
+      &.td-producer
+        width 12%
       &.product-price
         width 10%
       &.td-spinner
-        width 20%
+        width 18%
       &.orderLine-amount
         width 10%
       &.td-unit
@@ -469,14 +472,16 @@ th.next
         text-align center
         &:first-child
           text-align left
-          width 50%
+          width 40%
           padding-left 5px
         &.td-basket
           width 35px
+        &.td-producer
+          width 12%
         &.product-price
           width 10%
         &.td-spinner
-          width 20%
+          width 18%
         &.orderLine-amount
           width 10%
         &.td-unit
