--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -394,6 +394,7 @@ th.next,
   float: right;
 }
 .producer-dropdown button {
+  width: 184px;
   padding: 6px 9px;
 }
 .producer-dropdown .dropdown-menu {
@@ -460,17 +461,20 @@ th.next,
   text-align: center;
 }
 .catalog-head table td:first-child {
-  width: 50%;
+  width: 40%;
   text-align: left;
 }
 .catalog-head table td.td-basket {
   padding-right: 50px;
 }
+.catalog-head table td.td-producer {
+  width: 12%;
+}
 .catalog-head table td.product-price {
   width: 10%;
 }
 .catalog-head table td.td-spinner {
-  width: 20%;
+  width: 18%;
 }
 .catalog-head table td.orderLine-amount {
   width: 10%;
@@ -522,17 +526,20 @@ th.next,
 }
 .catalog table tr td:first-child {
   text-align: left;
-  width: 50%;
+  width: 40%;
   padding-left: 5px;
 }
 .catalog table tr td.td-basket {
   width: 35px;
 }
+.catalog table tr td.td-producer {
+  width: 12%;
+}
 .catalog table tr td.product-price {
   width: 10%;
 }
 .catalog table tr td.td-spinner {
-  width: 20%;
+  width: 18%;
 }
 .catalog table tr td.orderLine-amount {
   width: 10%;
