--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -364,7 +364,17 @@ th.next
   float right
   button
     width 184px
-    padding 6px 9px
+    padding 5px 9px
+    .btn-group-text
+      width 148px
+      overflow hidden
+     .icon-caret-down
+        position relative
+        top 2px
+    .icon-caret-down
+    .btn-group-text
+      display inline-block
+      vertical-align middle
   .dropdown-menu
     margin-left -70px
 
