--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -713,7 +713,7 @@ th.next
     h3
       margin-top 0
     .product-text
-      height 90px
+      //height 90px
       overflow auto
       text-align left
     .product-options
