--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -856,6 +856,30 @@ height 50px
     left 10px
     font-size 16px
 
+.modal.bootbox
+  height 125px
+  width 460px
+  margin-left -230px
+  .modal-dialog
+    padding 0
+    width 460px
+    .modal-content
+      border 0
+      padding 0
+      .modal-body
+        padding 20px
+      .modal-footer
+        position static
+        height auto
+        width auto
+        margin 0
+        padding 0 5px 0 0
+        .btn
+          float right
+          margin 15px 10px 0 0
+  .close
+    margin -15px -10px 0 0 !important
+
 .sidebar#sidebar
   height 100%
   left 0
