--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -714,7 +714,7 @@ th.next
       margin-top 0
     .product-text
       //height 90px
-      overflow auto
+      //overflow auto
       text-align left
     .product-options
       font-size 12px
@@ -726,9 +726,13 @@ th.next
       position static
     .modal-footer
       position absolute
-      height 60px
-      top 125px
+      overflow auto
+      min-height 55px
+      //height 60px
+      //top 125px
+      margin-top 0
       right 10px
+      bottom 10px
       width 430px
       background #fff
       text-align left
@@ -941,7 +945,7 @@ height 50px
     width 450px
   .catalog-head table td.td-basket
     width 35px
-    padding-right 50px
+    padding-right 0
   footer.short-footer .container
     margin-right 0
   .close
