--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -163,3 +163,11 @@
       width 100px
       margin-left -50px
       font-size 14px
+
+
+.signup-shop
+  textarea
+    width 100%
+    height 70px
+  .file-label
+    text-align left
