--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1321,6 +1321,16 @@ height 50px
       margin-top 0
       .order-delivery
         margin-right 0
+    .delete-order
+      font-size 20px
+      color #ff0000
+      display block
+      padding 0 3px
+      &:hover
+        text-decoration none
+      &.passive
+        cursor default
+        color #ccc
   .order-products
     display none
     .product-link
