--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -164,10 +164,25 @@
       margin-left -50px
       font-size 14px
 
-
 .signup-shop
+  .login-container
+    width 480px
   textarea
     width 100%
     height 70px
   .file-label
     text-align left
+    .file-name
+      padding-left 5px
+  .fa
+    position absolute
+    font-size 16px
+    top 8px
+    right 5px
+    &.fa-image
+      position static
+  .ace-file-input
+    height auto
+    .file-label
+      text-align center
+      margin-top -30px
