--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -2022,6 +2022,9 @@ height 50px
 .bo-edit table .product-options td.td-remove-options .remove-item {
   font-size: 16px;
 }
+.bo-edit table .product-producer >span {
+  display: block;
+}
 .bo-edit table .product-remove {
   min-width: 30px;
   text-align: center;
@@ -2049,7 +2052,7 @@ height 50px
 }
 .bo-edit table .remove-item {
   display: inline-block;
-  font-size: 24px;
+  font-size: 20px;
   color: #f00;
 }
 .bo-edit table .remove-item:hover {
@@ -2057,9 +2060,29 @@ height 50px
 }
 .bo-edit #edit-category td {
   vertical-align: top;
+  width: 36%;
+  padding: 10px;
 }
 .bo-edit #edit-category .category-parent {
   width: 20%;
+  text-align: center;
+}
+.bo-edit #edit-category .category-remove {
+  width: 4%;
+  text-align: center;
+}
+.bo-edit #edit-category .dropdown-menu {
+  margin-left: -50px;
+}
+.bo-edit #edit-producer td {
+  width: 48%;
+  padding: 10px;
+}
+.bo-edit #edit-producer td textarea {
+  min-height: 100px;
+}
+.bo-edit #edit-producer .producer-remove {
+  width: 4%;
   text-align: center;
 }
 /* админка */
@@ -2071,10 +2094,10 @@ height 50px
   border: 1px solid #ccc;
   padding: 10px;
   line-height: 16px;
-  width: 30%;
+  width: 24%;
 }
 .adminka table td.td-icon {
-  width: 5%;
+  width: 4%;
 }
 .adminka table .td-icon {
   text-align: center;
@@ -2115,6 +2138,23 @@ height 50px
 }
 .adminka table .update-owner-link {
   font-size: 14px;
+}
+.adminka table .admin-item {
+  padding: 5px;
+  position: relative;
+  display: inline-block;
+  margin: 0 3px 5px 3px;
+  background: #eff3f8;
+}
+.adminka table .admin-item .remove-admin-item {
+  position: absolute;
+  top: -8px;
+  font-size: 16px;
+  right: -5px;
+  color: #f00;
+}
+.adminka table .admin-item .remove-admin-item:hover {
+  text-decoration: none;
 }
 .adminka-users {
   display: none;
