--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1557,6 +1557,13 @@ height 50px
     width 100%
     overflow-x scroll
     margin-bottom 10px
+  .table-add-product
+    position relative
+    .categories-dropdown
+    .producers-dropdown
+      position static !important
+    .dropdown-menu
+      top 0
   .products-table
     overflow-y hidden
     tbody td
