--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -84,6 +84,13 @@ transform()
     z-index 1031
   a.navbar-brand
     padding 0
+    display inline-block
+    float none
+  a.about-shop
+    display inline-block
+    color #fff
+    &:hover
+      text-decoration none
   img
     height 45px
 
