--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -407,5 +407,29 @@ transform()
     border-left 1px solid #ccc
 
 
+/* новые стили после редизайна 11.06.14 */
 
-
+.lenta-item
+  margin-bottom 20px
+  .first-message
+    border 1px solid #D7DBDD
+    position relative
+    padding 5px
+    .user
+      float left
+      img
+        width 100px
+    .body
+      margin-left 110px
+      .time
+        float right
+      .tools
+        position absolute
+        right 5px
+  .dialogs
+    clear left
+    margin 0 0 0 110px
+    padding-top 15px
+    padding-right 0
+  .message-textarea
+    width 99%
