--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -86,7 +86,7 @@ transform()
     padding 0
     display inline-block
     float none
-  a.about-shop
+  a.about-shop-link
     display inline-block
     color #fff
     &:hover
