--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -453,6 +453,11 @@ transform()
   border-radius 0
 .itemdiv.dialogdiv > .body
   padding-bottom 28px
+.btn.active:after
+  border-bottom 0
+.btn-info.no-border.active
+  background #4184AF !important
+  border-color #4184AF !important
 
 .message-input
   padding 10px
