about-shop ver1

--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1576,6 +1576,9 @@ height 50px
 .modal-error .error-details-link {
   float: right;
 }
+.page {
+  display: none;
+}
 /* backoffice */
 .backoffice .main-content {
   margin-left: 200px;
