--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1308,6 +1308,9 @@ height 50px
   .error-details-link
     float right
 
+.page
+  display none
+
 /* backoffice */
 .backoffice .main-content
   margin-left 200px
