--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1291,6 +1291,15 @@ height 50px
             padding 15px 10px 0 0
             margin-top 15px
             border-top 1px solid #438eb9
+
+/* page-about-shop*/
+
+.page-about-shop
+  .page
+    display none
+  .shop-about
+    display block
+
 /* error */
 .modal-error
   height 130px
@@ -1307,9 +1316,6 @@ height 50px
     height 54px
   .error-details-link
     float right
-
-.page
-  display none
 
 /* backoffice */
 .backoffice .main-content
