--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -119,6 +119,7 @@ transform()
     li
       border-top 1px solid #438eb9
       padding 5px
+      list-style none
       &:first-child
         border-top 0
   .importantly-left
