--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -111,6 +111,7 @@ h1 {
 .sidebar-right ul li {
   border-top: 1px solid #438eb9;
   padding: 5px;
+  list-style: none;
 }
 .sidebar-right ul li:first-child {
   border-top: 0;
