--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -537,6 +537,14 @@ h1 {
 .lenta-item {
   margin-bottom: 20px;
 }
+.lenta-item .wallitem-message,
+.lenta-item .wallitem-topic {
+  margin: 0 10px;
+}
+.lenta-item .wallitem-message {
+  padding-top: 10px;
+  border-top: 1px solid #5090c1;
+}
 .lenta-item .first-message {
   border: 1px solid #d7dbdd;
   position: relative;
