--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -476,6 +476,12 @@ transform()
 
 .lenta-item
   margin-bottom 20px
+  .wallitem-message
+  .wallitem-topic
+    margin 0 10px
+  .wallitem-message
+    padding-top 10px
+    border-top 1px solid rgb(80, 144, 193)
   .first-message
     border 1px solid #D7DBDD
     position relative
