--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -38,6 +38,8 @@ transform()
 
 .navbar-container
   text-align center
+  .navbar-brand img
+    width 170px
 
 .form-search
   display inline-block
