--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -475,6 +475,18 @@ transform()
     margin-bottom 10px
   .hashtag
     margin-left 10px
+  .create-poll
+    margin-bottom 10px
+    input
+      width 100%
+      margin-bottom 5px
+    .poll-readonly
+      cursor text
+    .poll-cancel
+      font-size 24px
+      margin-top -10px
+      &:hover
+        text-decoration none
 
 .lenta-item
   margin-bottom 20px
