--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -187,3 +187,73 @@
     .file-label
       text-align center
       margin-top -37px
+
+  /* login-forum */
+.login-forum
+  background url(../i/login-bg.jpg) top center
+  background-size 100% 100%
+  padding-top 100px
+  .login-left
+    text-align center
+    color #fff
+    padding-top 20px
+    h1
+      font-size 28px
+    img
+      width 100%
+      max-width 400px
+  .login-container
+    width 100%
+    max-width 375px
+    .btn
+      border 2px solid #fff
+      background-color transparent !important
+    input
+      border 2px solid #fff
+      color #fff
+      background-color transparent
+    input::-webkit-input-placeholder
+      color #fff
+    input:-moz-placeholder
+      color #fff
+    i
+      color #fff
+    .or
+      text-align center
+      color #fff
+      margin 5px 0
+      font-size 20px
+    .tools
+      margin-bottom 15px
+      .checkbox
+        display inline-block
+        padding-left 0
+        color #fff
+        margin 0
+        line-height 16px
+      a
+        color #fff
+        font-size 14px
+        margin-left 10px
+        vertical-align middle
+        display inline-block
+        &:hover
+          text-decoration none
+    .widget-box
+      padding 0
+      background transparent
+      position static
+      .widget-body
+        background transparent
+      .widget-main
+        background transparent //
+
+.help-text
+  font-size 12px
+  color #fff
+  text-align center
+  img
+    display inline-block
+    width 100%
+    max-width 400px
+    margin-bottom 15px
