--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -205,22 +205,25 @@
   .login-container
     width 100%
     max-width 375px
+    box-shadow 0 0 15px rgba(0, 0, 0, 0.5)
+    -webkit-box-shadow 0 0 15px rgba(0, 0, 0, 0.5)
+    -moz-box-shadow 0 0 15px rgba(0, 0, 0, 0.5)
     .btn
-      border 2px solid #fff
-      background-color transparent !important
+      //border 2px solid #fff
+      //background-color transparent !important
     input
-      border 2px solid #fff
-      color #fff
-      background-color transparent
-    input::-webkit-input-placeholder
+      //border 2px solid #fff
+      //color #fff
+      //background-color transparent
+    /*input::-webkit-input-placeholder
       color #fff
     input:-moz-placeholder
-      color #fff
+      color #fff*/
     i
-      color #fff
+      //color #fff
     .or
       text-align center
-      color #fff
+      //color #fff
       margin 5px 0
       font-size 20px
     .tools
@@ -228,11 +231,11 @@
       .checkbox
         display inline-block
         padding-left 0
-        color #fff
+        //color #fff
         margin 0
         line-height 16px
       a
-        color #fff
+        //color #fff
         font-size 14px
         margin-left 10px
         vertical-align middle
@@ -246,7 +249,8 @@
       .widget-body
         background transparent
       .widget-main
-        background transparent //
+        border-radius 3px
+        padding 25px 36px
 
 .help-text
   font-size 12px
